--- a/my-project/package.json
+++ b/my-project/package.json
@@ -8,10 +8,14 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "server": "nodemon src/server.js"
   },
   "dependencies": {
     "jquery": "^3.4.1",
+    "mongoose": "^5.7.12",
+    "morgan": "^1.9.1",
+    "nodemon": "^2.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
