--- a/my-project/package.json
+++ b/my-project/package.json
@@ -12,6 +12,8 @@
     "server": "nodemon src/server.js"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.1.0",
     "jquery": "^3.4.1",
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
