--- a/my-project/package.json
+++ b/my-project/package.json
@@ -19,7 +19,9 @@
     "morgan": "^1.9.1",
     "nodemon": "^2.0.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1",
+    "vee-validate": "^2.2.8"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
