--- a/my-project/package.json
+++ b/my-project/package.json
@@ -19,7 +19,13 @@
         "morgan": "^1.9.1",
         "nodemon": "^2.0.0",
         "vue": "^2.5.2",
-        "vue-router": "^3.0.1"
+        "vue-router": "^3.0.1",
+        "cors": "^2.8.5",
+        "body-parser": "^1.19.0",
+        "bcryptjs": "^2.4.3",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "express-jwt": "^5.3.1"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
