--- a/my-project/package.json
+++ b/my-project/package.json
@@ -9,7 +9,7 @@
         "start": "npm run dev",
         "lint": "eslint --ext .js,.vue src",
         "build": "node build/build.js",
-        "server": "nodemon server/server.js"
+        "server": "clear && nodemon server/server.js"
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
