--- a/my-project/server/config.json
+++ b/my-project/server/config.json
@@ -1,4 +1,4 @@
 {
-    "connectionString": "mongodb::/localhost/node-mongo-registration-login-api",
+    "connectionString": "mongodb://localhost/usuario",
     "secret": "Estamos mal pero poco a poco se ve la luz y vamos a mejor. ANIMO SEÑORES"
 }
