--- a/my-project/.babelrc
+++ b/my-project/.babelrc
@@ -1,22 +1,13 @@
 {
     "presets": [
         [
-            "env",
+            "@babel/preset-env",
             {
-                "modules": false,
-                "targets": {
-                    "browsers": [
-                        "> 1%",
-                        "last 2 versions",
-                        "not ie <= 8"
-                    ]
-                }
+                "modules": false
             }
-        ],
-        "stage-2"
+        ]
     ],
     "plugins": [
-        "transform-vue-jsx",
-        "transform-runtime"
+        "@babel/plugin-syntax-dynamic-import"
     ]
 }
