--- a/my-project/package.json
+++ b/my-project/package.json
@@ -49,6 +49,7 @@
     },
     "devDependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+        "@babel/preset-env": "^7.7.7",
         "@vue/test-utils": "^1.0.0-beta.30",
         "autoprefixer": "^7.1.2",
         "babel-core": "^6.22.1",
