--- a/package.json
+++ b/package.json
@@ -42,10 +42,7 @@
         "jsonwebtoken": "^8.5.1",
         "express-jwt": "^5.3.1",
         "vuex": "^3.1.1",
-        "vee-validate": "^2.2.8",
-        "babel-preset-env": "^1.7.0",
-        "babel-preset-vue": "^2.0.2",
-        "babel-plugin-syntax-dynamic-import": "6.18.0"
+        "vee-validate": "^2.2.8"
     },
     "devDependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.7.4",
