--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
 		"build": "vue-cli-service build"
 	},
 	"dependencies": {
-		"vue": "^2.6.11"
+		"bootstrap-vue": "^2.16.0",
+		"mdbvue": "^6.7.1",
+		"vee-validate": "^3.3.9",
+		"vue": "^2.6.11",
+		"vue-router": "^3.4.3",
+		"vuex": "^3.5.1"
 	},
 	"devDependencies": {
 		"@vue/cli-service": "~4.5.0",
