--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"private": true,
 	"scripts": {
 		"serve": "vue-cli-service serve",
-		"build": "vue-cli-service build"
+		"build": "vue-cli-service build",
+		"clean": "rm -Rf dist"
 	},
 	"dependencies": {
 		"bootstrap-vue": "^2.16.0",
