--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vee-validate": "^3.3.9",
     "vue": "^2.6.11",
     "vue-router": "^3.4.3",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1", 
+    "mongoose": "^5.10.0"
   },
   "devDependencies": {
     "@vue/cli-service": "~4.5.0",
