--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
 		"clean": "rm -Rf dist",
-		"formatter": "prettier --use-tabs true --no-bracket-spacing true --jsx-bracket-same-line true --tab-width 4 --print-width 90 --write .",
+		"formatter": "prettier --use-tabs true --no-bracket-spacing true --jsx-bracket-same-line --tab-width 4 --print-width 100 --write .",
 		"server": "clear && nodemon --no-deprecation server/server.js"
 	},
 	"dependencies": {
