--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
 		"mdbvue": "^6.7.1",
 		"mongoose": "^5.10.0",
 		"morgan": "^1.10.0",
-		"nodemon": "^2.0.4",
 		"prettier": "^2.0.5",
 		"vue": "^2.6.11",
 		"vue-router": "^3.4.3",
-		"vuex": "^3.5.1"
+		"vuex": "^3.5.1",
+		"nodemailer": "^6.4.11"
 	},
 	"devDependencies": {
 		"@vue/cli-service": "~4.5.0",
