--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"vue": "^2.6.11",
 		"vue-router": "^3.4.3",
 		"vuex": "^3.5.1",
-		"nodemailer": "^6.4.11"
+		"nodemailer": "^6.4.11",
+		"node-env-file": "^0.1.8"
 	},
 	"devDependencies": {
 		"@vue/cli-service": "~4.5.0",
