--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 	},
 	"devDependencies": {
 		"@vue/cli-service": "~4.5.0",
-		"vue-template-compiler": "^2.6.11",
+		"vue-template-compiler": "^2.6.11"
 	},
 	"browserslist": [
 		"> 1%",
