--- a/package.json
+++ b/package.json
@@ -1,41 +1,44 @@
 {
-	"name": "sytw-final-e10-vue",
-	"description": "This project have all the code for the SYTW final project (TEAM E10)",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"front": "vue-cli-service serve --port 8080",
-		"build": "vue-cli-service build",
-		"clean": "rm -Rf dist",
-		"formatter": "prettier --use-tabs true --no-bracket-spacing --jsx-bracket-same-line --tab-width 4 --print-width 100 --write .",
-		"server": "clear && nodemon --no-deprecation server/server.js"
-	},
-	"dependencies": {
-		"bcryptjs": "^2.4.3",
-		"body-parser": "^1.19.0",
-		"bootstrap-vue": "^2.16.0",
-		"express-jwt": "^6.0.0",
-		"jsonwebtoken": "^8.5.1",
-		"mdbvue": "^6.7.1",
-		"mongoose": "^5.10.0",
-		"morgan": "^1.10.0",
-		"node-env-file": "^0.1.8",
-		"nodemailer": "^6.4.11",
-		"prettier": "^2.0.5",
-		"vue": "^2.6.11",
-		"vue-router": "^3.4.3",
-		"vuex": "^3.5.1",
-		"path": "^0.12.7",
-		"cors": "^2.8.5"
-	},
-	"devDependencies": {
-		"@vue/cli-service": "~4.5.0",
-		"nodemon": "^2.0.4",
-		"vue-template-compiler": "^2.6.11"
-	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not dead"
-	]
+  "name": "sytw-final-e10-vue",
+  "version": "0.1.0",
+  "private": true,
+  "description": "This project have all the code for the SYTW final project (TEAM E10)",
+  "scripts": {
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "clean": "rm -Rf dist",
+    "formatter": "prettier --use-tabs true --no-bracket-spacing --jsx-bracket-same-line --tab-width 4 --print-width 100 --write .",
+    "front": "vue-cli-service serve --port 8080",
+    "server": "clear && nodemon --no-deprecation server/server.js"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "bootstrap-vue": "^2.16.0",
+    "cors": "^2.8.5",
+    "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mdbvue": "^6.7.1",
+    "mongoose": "^5.10.0",
+    "morgan": "^1.10.0",
+    "node-env-file": "^0.1.8",
+    "nodemailer": "^6.4.11",
+    "path": "^0.12.7",
+    "prettier": "^2.0.5",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.3",
+    "vuex": "^3.5.1"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-unit-jest": "^4.5.4",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/test-utils": "^1.0.4",
+    "nodemon": "^2.0.4",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
