--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"private": true,
 	"scripts": {
 		"front": "vue-cli-service serve --port 8080",
-		"build": "vue-cli-service build",
+		"deploy": "vue-cli-service build && serve -s dist -l 8080",
 		"clean": "rm -Rf dist",
 		"formatter": "prettier --use-tabs true --no-bracket-spacing --jsx-bracket-same-line --tab-width 4 --print-width 100 --write .",
 		"server": "clear && nodemon --no-deprecation server/server.js"
@@ -14,6 +14,7 @@
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"bootstrap-vue": "^2.16.0",
+		"cors": "^2.8.5",
 		"express-jwt": "^6.0.0",
 		"jsonwebtoken": "^8.5.1",
 		"mdbvue": "^6.7.1",
@@ -21,12 +22,12 @@
 		"morgan": "^1.10.0",
 		"node-env-file": "^0.1.8",
 		"nodemailer": "^6.4.11",
+		"path": "^0.12.7",
 		"prettier": "^2.0.5",
+		"serve": "^11.3.2",
 		"vue": "^2.6.11",
 		"vue-router": "^3.4.3",
-		"vuex": "^3.5.1",
-		"path": "^0.12.7",
-		"cors": "^2.8.5"
+		"vuex": "^3.5.1"
 	},
 	"devDependencies": {
 		"@vue/cli-service": "~4.5.0",
