--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 language: node_js
+
 node_js:
 - stable
+
 cache:
   directories:
     - "node_modules"
+
 install:
 - npm install
+
 script:
-- npm test
+- npm clean
+# - npm test
 - npm run build
