[8] Travis con tests y slack y sonarqube

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ addons:
   sonarcloud:
       organization: "sytw2019"
       token:
-        secure: SONAR_TOKEN
+        secure: $SONAR_TOKEN
 
 cache:
   directories:
