--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,5 @@ sonar.organization=sytw2019
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=E10
+
+sonar.login=${SONAR_TOKEN}
