--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ script:
 - npm run clean
 - npm run test:unit
 - npm run build
-- sonar-scanner -Dproject.settings=./sonar-project.properties --debug
+# - sonar-scanner -Dproject.settings=./sonar-project.properties --debug
